--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             <p>I had many different duties throughout the years.  I had assisted with deliveries to customer houses.  Carry full size sofas and bedroom sets, and assemble dining room tables.  Getting a DOT physical for a medical examiner card to drive our delivery trucks.  In the warehouse pulling delivery orders, unboxing of many pieces and examining for damage, and assembly of some products like dining room chairs.  Shipping and receiving was my primary duties the last couple of years.  Daily shipments that we unloaded and palletized.  Checking of shipping invoices to ensure proper product inventory.  Moving product to warehousing racks to clear space for more incoming freight and outgoing regional shipments.  Managing loading priorities for our local regional stores, filling out shipment paperwork and contacting shipping companies of ready trailers.</p>
       </div>
     </div>
+  
+   <div class="edu">
+      <h2>Education</h2>
+     <li>Bachelors of Science, Digital Entertainment and Game Design</li>
+    </div>
     
     <div class="contact">
      <ul>
@@ -66,3 +71,5 @@
     </div>
   </body>
 </html>
+
+
